WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125778
Fix build warning in files including DrawingAreaProxy.h
https://bugs.webkit.org/show_bug.cgi?id=125778
Summary
Fix build warning in files including DrawingAreaProxy.h
Michal Pakula vel Rutka
Reported
2013-12-16 06:47:24 PST
SSIA
Attachments
proposed patch
(1.49 KB, patch)
2013-12-16 06:55 PST
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2013-12-16 06:55:44 PST
Created
attachment 219313
[details]
proposed patch
WebKit Commit Bot
Comment 2
2013-12-16 08:58:23 PST
Comment on
attachment 219313
[details]
proposed patch Clearing flags on attachment: 219313 Committed
r160643
: <
http://trac.webkit.org/changeset/160643
>
WebKit Commit Bot
Comment 3
2013-12-16 08:58:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug