Fix build warning in files including DrawingAreaProxy.h https://bugs.webkit.org/show_bug.cgi?id=125778

Reviewed by Anders Carlsson.

Remove unused parameters from method declaration.

* UIProcess/DrawingAreaProxy.h:
(WebKit::DrawingAreaProxy::adjustTransientZoom):
(WebKit::DrawingAreaProxy::commitTransientZoom):


Canonical link: https://commits.webkit.org/143805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160643 268f45cc-cd09-0410-ab3c-d52691b4dbfc